# branch-deleter

./: .codeclimate.yml  .gitignore  LICENSE  branch-deleter.cabal
app/: Main.hs  Output.hs
data/: welcome-screen.txt
src/: Git.hs
