name:                branch-deleter
version:             0.1.0.0
synopsis:            CLI tool for cleaning up git branches
description:         CLI tool for cleaning up git branches
homepage:            https://github.com/githubuser/branch-deleter#readme
license:             MIT
license-file:        LICENSE
author:              Todd Mohney
maintainer:          toddmohney@gmail.com
copyright:           2017 Todd Mohney
category:            CLI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings
  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds
    -fwarn-unused-imports
  build-depends:       base >= 4.7 && < 5
                     , process >= 1.4.2.0 && < 1.4.3.0
                     , text >= 1.2.2.1 && < 1.2.3.0
  exposed-modules:     Git

executable branch-deleter-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds
    -fwarn-unused-imports
    -threaded
    -rtsopts
    -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings
  build-depends:       base
                     , ansi-terminal >= 0.6.2.3 && < 0.6.3.0
                     , branch-deleter
                     , text >= 1.2.2.1 && < 1.2.3.0

test-suite branch-deleter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base
                     , branch-deleter

source-repository head
  type:     git
  location: https://github.com/githubuser/branch-deleter
